@@ -31,6 +31,7 @@ Improvements::
 
 * process `pre-wrap` role in text formatter
 * drop support for the unmaintained payment font (`pf`) for use in font-based icons
+* refactor formatted text transform to simplify how inner space is collapsed; verify only inner hard breaks are preserved
 
 Bug Fixes::
 
